# gotham

./: .cirrus.yml  BUGS_FIXED_AND_FEATURES_ADDED.md  CMakeLists.txt  CODE_QUALITY_IMPROVEMENTS.md  COMPLETE_ENHANCED_SYSTEM_EXAMPLE.md  COMPREHENSIVE_TESTING_FRAMEWORK.md  CONTRIBUTING.md  COPYING  ENHANCED_SECURITY_SYSTEM.md  ENHANCED_WORKFLOW_EXAMPLES.md  FINAL_ENHANCED_WORKFLOW.md  LAYOUT_SYSTEM_IMPLEMENTATION_COMPLETE.md  MAIN_SCREEN_FIX_SUMMARY.md  README.md  SCREENS_COMPLETED.md  SECURITY.md  TWO_PHASE_ESCROW_SYSTEM.md  UI_UX_IMPROVEMENTS_SUMMARY.md  libgothamkernel.pc.in  test_native_miner.py  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.sh
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml  gui_issue.yml
.github/workflows/: ci.yml
.tx/: config
ci/: lint_imagefile  lint_run.sh  lint_run_all.sh  test_imagefile  test_run_all.sh
ci/lint/: 04_install.sh  06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_multiprocess.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_native.sh  00_setup_env_mac_native_fuzz.sh  00_setup_env_native_asan.sh  00_setup_env_native_centos.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_msan.sh  00_setup_env_native_tidy.sh  (+11 more)
cmake/: ccache.cmake  crc32c.cmake  gotham-build-config.h.in  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  tests.cmake  windows-app.manifest.in
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  gotham-conf.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-31278.md  (+8 more)
economy/: 2.md  onchain_economy.md
protocols/: DAO_steps.md
share/: setup.nsi.in
src/: .clang-tidy  CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  cluster_linearize.h  coins.cpp  coins.h  compressor.cpp  compressor.h  core_io.h  (+122 more)
src/sdl2/: CMakeLists.txt  README.md  UI_COMPLETION_REPORT.md  UI_CONSISTENCY_GUIDE.md  UI_IMPROVEMENTS.md  UI_IMPROVEMENTS_SUMMARY.md  build.sh  demo  demo.cpp  gotham_city_app.cpp  gotham_city_app.h  gotham_city_gui.cpp  gotham_city_gui.h  main.cpp  renderer.cpp  renderer.h  window_manager.cpp  window_manager.h
src/sdl2/screens/: console_screen.cpp  console_screen.h  main_screen.cpp  main_screen.h  receive_screen.cpp  receive_screen.h  send_screen.cpp  send_screen.h  settings_screen.cpp  settings_screen.h  splash_screen.cpp  splash_screen.h  transactions_screen.cpp  transactions_screen.h  transactions_screen_new.cpp  wallet_screen.cpp  wallet_screen.h
src/sdl2/stubs/common/: args.cpp  args.h  init.cpp  init.h  system.cpp  system.h
src/sdl2/stubs/interfaces/: node.cpp  node.h
src/sdl2/stubs/util/: translation.h
src/sdl2/ui/: button.cpp  button.h  label.cpp  label.h  layout_manager.cpp  layout_manager.h  navigation_bar.cpp  navigation_bar.h  navigation_manager.cpp  navigation_manager.h  panel.cpp  panel.h  persistent_layout.cpp  persistent_layout.h  progress_bar.cpp  progress_bar.h  screen.cpp  screen.h  text_input.cpp  text_input.h  ui_factory.cpp  ui_factory.h  ui_style_guide.h  ui_utils.cpp  ui_utils.h
src/sdl2/utils/: animation.cpp  animation.h  font_manager.cpp  font_manager.h  texture_manager.cpp  texture_manager.h  theme.cpp  theme.h
src/sdl2/wallet/: wallet_manager.cpp  wallet_manager.h
test/: CMakeLists.txt  README.md  config.ini.in  get_previous_releases.py
(+1776 files in other folders)
